# dsf-minutes-agent

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  agent.py  justfile  pyproject.toml
src/: agent.py
